baml_language/crates/baml_tests/snapshots/parser_expressions/baml_tests__parser_expressions__02_parser__field_access.snap
---
source: target/debug/build/baml_tests-cb4594c533e23a52/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "FieldAccess"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "user"
        TYPE_EXPR " User"
          WORD "User"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR " string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "name"
          EQUALS "="
          PATH_EXPR " user.name"
            WORD "user"
            DOT "."
            WORD "name"
        SEMICOLON ";"
        LET_STMT
          KW_LET "let"
          WORD "bio"
          EQUALS "="
          PATH_EXPR " user.profile.bio"
            WORD "user"
            DOT "."
            WORD "profile"
            DOT "."
            WORD "bio"
        SEMICOLON ";"
        LET_STMT
          KW_LET "let"
          WORD "theme"
          EQUALS "="
          PATH_EXPR " user.profile.settings.theme"
            WORD "user"
            DOT "."
            WORD "profile"
            DOT "."
            WORD "settings"
            DOT "."
            WORD "theme"
        SEMICOLON ";"
        LET_STMT
          KW_LET "let"
          WORD "firstTag"
          EQUALS "="
          INDEX_EXPR
            PATH_EXPR " user.tags"
              WORD "user"
              DOT "."
              WORD "tags"
            L_BRACKET "["
            INTEGER_LITERAL "0"
            R_BRACKET "]"
        SEMICOLON ";"
        RETURN_STMT "

  return theme"
          KW_RETURN "return"
          WORD "theme"
        SEMICOLON ";"
        R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "User"
    L_BRACE "{"
    FIELD
      WORD "name"
      TYPE_EXPR " string"
        WORD "string"
    FIELD
      WORD "profile"
      TYPE_EXPR " Profile"
        WORD "Profile"
    FIELD
      WORD "tags"
      TYPE_EXPR " string[]"
        WORD "string"
        L_BRACKET "["
        R_BRACKET "]"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Profile"
    L_BRACE "{"
    FIELD
      WORD "bio"
      TYPE_EXPR " string"
        WORD "string"
    FIELD
      WORD "settings"
      TYPE_EXPR " Settings"
        WORD "Settings"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Settings"
    L_BRACE "{"
    FIELD
      WORD "theme"
      TYPE_EXPR " string"
        WORD "string"
    R_BRACE "}"

=== ERRORS ===
Error: Expected expression
   ╭─[ 0:3:23 ]
   │
 3 │   let name = user.name;
   │                       ┬  
   │                       ╰── Expected expression
───╯

Error: Expected expression
   ╭─[ 0:6:29 ]
   │
 6 │   let bio = user.profile.bio;
   │                             ┬  
   │                             ╰── Expected expression
───╯

Error: Expected expression
   ╭─[ 0:9:42 ]
   │
 9 │   let theme = user.profile.settings.theme;
   │                                          ┬  
   │                                          ╰── Expected expression
───╯

Error: Expected expression
    ╭─[ 0:12:30 ]
    │
 12 │   let firstTag = user.tags[0];
    │                              ┬  
    │                              ╰── Expected expression
────╯

Error: Expected expression
    ╭─[ 0:14:15 ]
    │
 14 │   return theme;
    │               ┬  
    │               ╰── Expected expression
────╯
