baml_language/crates/baml_tests/snapshots/parser_expressions/baml_tests__parser_expressions__02_parser__for_loops.snap
---
source: target/debug/build/baml_tests-0fbde5d1c173768c/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "c_style_for_loop"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR " int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT "
  let result = 0;"
          KW_LET "let"
          WORD "result"
          EQUALS "="
          INTEGER_LITERAL "0"
          SEMICOLON ";"
        FOR_EXPR
          KW_FOR "for"
          L_PAREN "("
          LET_STMT "let i = 0;"
            KW_LET "let"
            WORD "i"
            EQUALS "="
            INTEGER_LITERAL "0"
            SEMICOLON ";"
          BINARY_EXPR "i < 10"
            WORD "i"
            LESS "<"
            INTEGER_LITERAL "10"
          SEMICOLON ";"
          BINARY_EXPR "i += 1"
            WORD "i"
            PLUS_EQUALS "+="
            INTEGER_LITERAL "1"
          R_PAREN ")"
          BLOCK_EXPR
            L_BRACE "{"
            BINARY_EXPR "result += i"
              WORD "result"
              PLUS_EQUALS "+="
              WORD "i"
            SEMICOLON ";"
            R_BRACE "}"
        RETURN_STMT "
  return result;"
          KW_RETURN "return"
          WORD "result"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "iterator_style_for_loop"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR " int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT "
  let result = 0;"
          KW_LET "let"
          WORD "result"
          EQUALS "="
          INTEGER_LITERAL "0"
          SEMICOLON ";"
        FOR_EXPR
          KW_FOR "for"
          L_PAREN "("
          LET_STMT "let i"
            KW_LET "let"
            WORD "i"
          KW_IN "in"
          ARRAY_LITERAL " [1, 2, 3]"
            L_BRACKET "["
            INTEGER_LITERAL "1"
            COMMA ","
            INTEGER_LITERAL "2"
            COMMA ","
            INTEGER_LITERAL "3"
            R_BRACKET "]"
          R_PAREN ")"
          BLOCK_EXPR
            L_BRACE "{"
            BINARY_EXPR "result += i"
              WORD "result"
              PLUS_EQUALS "+="
              WORD "i"
            SEMICOLON ";"
            R_BRACE "}"
        RETURN_STMT "
  return result;"
          KW_RETURN "return"
          WORD "result"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "nested_for_loop"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR " int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT "
  let result = 0;"
          KW_LET "let"
          WORD "result"
          EQUALS "="
          INTEGER_LITERAL "0"
          SEMICOLON ";"
        FOR_EXPR
          KW_FOR "for"
          L_PAREN "("
          LET_STMT "let i"
            KW_LET "let"
            WORD "i"
          KW_IN "in"
          ARRAY_LITERAL " [1, 2, 3]"
            L_BRACKET "["
            INTEGER_LITERAL "1"
            COMMA ","
            INTEGER_LITERAL "2"
            COMMA ","
            INTEGER_LITERAL "3"
            R_BRACKET "]"
          R_PAREN ")"
          BLOCK_EXPR
            L_BRACE "{"
            FOR_EXPR
              KW_FOR "for"
              L_PAREN "("
              LET_STMT "let j"
                KW_LET "let"
                WORD "j"
              KW_IN "in"
              ARRAY_LITERAL " [4, 5, 6]"
                L_BRACKET "["
                INTEGER_LITERAL "4"
                COMMA ","
                INTEGER_LITERAL "5"
                COMMA ","
                INTEGER_LITERAL "6"
                R_BRACKET "]"
              R_PAREN ")"
              BLOCK_EXPR
                L_BRACE "{"
                BINARY_EXPR
                  WORD "result"
                  PLUS_EQUALS "+="
                  BINARY_EXPR "i * j"
                    WORD "i"
                    STAR "*"
                    WORD "j"
                SEMICOLON ";"
                R_BRACE "}"
            R_BRACE "}"
        RETURN_STMT "
  return result;"
          KW_RETURN "return"
          WORD "result"
          SEMICOLON ";"
        R_BRACE "}"

=== ERRORS ===
None
