baml_language/crates/baml_tests/snapshots/parser_expressions/baml_tests__parser_expressions__02_parser__if_expressions.snap
---
source: target/debug/build/baml_tests-91bdee82f91f7b04/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    WORD "function"
    WORD "ConditionalLogic"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER "age"
        WORD "age"
  WORD "int"
  R_PAREN ")"
  ARROW "->"
  WORD "string"
  L_BRACE "{"
  WORD "if"
  WORD "age"
  LESS "<"
  INTEGER "18"
  L_BRACE "{"
  WORD "return"
  QUOTE """
  WORD "minor"
  QUOTE """
  R_BRACE "}"
  WORD "else"
  WORD "if"
  WORD "age"
  LESS "<"
  INTEGER "65"
  L_BRACE "{"
  WORD "return"
  QUOTE """
  WORD "adult"
  QUOTE """
  R_BRACE "}"
  WORD "else"
  L_BRACE "{"
  WORD "return"
  QUOTE """
  WORD "senior"
  QUOTE """
  R_BRACE "}"
  R_BRACE "}"

=== ERRORS ===
  Expected Expected type annotation (:), found Expected type annotation (:)
  Expected Expected RParen, found Word, found Expected RParen, found Word
  Expected Expected return type (->), found Expected return type (->)
  Expected Expected function body, found Expected function body
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
  Expected Expected top-level declaration, found Expected top-level declaration
