baml_language/crates/baml_tests/snapshots/parser_expressions/baml_tests__parser_expressions__02_parser__match_expressions.snap
---
source: target/debug/build/baml_tests-cb4594c533e23a52/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  ENUM_DEF
    KW_ENUM "enum"
    WORD "Status"
    L_BRACE "{"
    ENUM_VARIANT "
  PENDING"
      WORD "PENDING"
    ENUM_VARIANT "
  ACTIVE"
      WORD "ACTIVE"
    ENUM_VARIANT "
  INACTIVE"
      WORD "INACTIVE"
    ENUM_VARIANT "
  SUSPENDED"
      WORD "SUSPENDED"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "HandleStatus"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "status"
        TYPE_EXPR " Status"
          WORD "Status"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR " string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        WORD "match"
        OBJECT_LITERAL
          WORD "status"
          L_BRACE "{"
          OBJECT_FIELD "
    Status"
            WORD "Status"
          DOUBLE_COLON "::"
          OBJECT_FIELD "PENDING"
            WORD "PENDING"
          EQUALS "="
          GREATER ">"
          OBJECT_FIELD
            STRING_LITERAL " "Waiting for approval""
              QUOTE """
              WORD "Waiting"
              KW_FOR "for"
              WORD "approval"
              QUOTE """
          OBJECT_FIELD "
    Status"
            WORD "Status"
          DOUBLE_COLON "::"
          OBJECT_FIELD "ACTIVE"
            WORD "ACTIVE"
          EQUALS "="
          GREATER ">"
          OBJECT_FIELD
            STRING_LITERAL " "Currently active""
              QUOTE """
              WORD "Currently"
              WORD "active"
              QUOTE """
          OBJECT_FIELD "
    Status"
            WORD "Status"
          DOUBLE_COLON "::"
          OBJECT_FIELD "INACTIVE"
            WORD "INACTIVE"
          EQUALS "="
          GREATER ">"
          OBJECT_FIELD
            STRING_LITERAL " "Not active""
              QUOTE """
              WORD "Not"
              WORD "active"
              QUOTE """
          OBJECT_FIELD "
    Status"
            WORD "Status"
          DOUBLE_COLON "::"
          OBJECT_FIELD "SUSPENDED"
            WORD "SUSPENDED"
          EQUALS "="
          GREATER ">"
          OBJECT_FIELD
            STRING_LITERAL " "Temporarily suspended""
              QUOTE """
              WORD "Temporarily"
              WORD "suspended"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "ComplexMatch"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "value"
        TYPE_EXPR " int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR " string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        WORD "match"
        OBJECT_LITERAL
          WORD "value"
          L_BRACE "{"
          INTEGER_LITERAL "0"
          EQUALS "="
          GREATER ">"
          OBJECT_FIELD
            STRING_LITERAL " "zero""
              QUOTE """
              WORD "zero"
              QUOTE """
          INTEGER_LITERAL "1"
          PIPE "|"
          INTEGER_LITERAL "2"
          PIPE "|"
          INTEGER_LITERAL "3"
          EQUALS "="
          GREATER ">"
          OBJECT_FIELD
            STRING_LITERAL " "small""
              QUOTE """
              WORD "small"
              QUOTE """
          INTEGER_LITERAL "4"
          DOT "."
          DOT "."
          INTEGER_LITERAL "10"
          EQUALS "="
          GREATER ">"
          OBJECT_FIELD
            STRING_LITERAL " "medium""
              QUOTE """
              WORD "medium"
              QUOTE """
          OBJECT_FIELD "
    _"
            WORD "_"
          EQUALS "="
          GREATER ">"
          OBJECT_FIELD
            STRING_LITERAL " "large""
              QUOTE """
              WORD "large"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"

=== ERRORS ===
Error: Expected Colon, found DoubleColon
    ╭─[ 0:10:11 ]
    │
 10 │     Status::PENDING => "Waiting for approval"
    │           ─┬  
    │            ╰── Expected Colon, found DoubleColon
────╯

Error: Expected ',' or '}' after object field
    ╭─[ 0:10:11 ]
    │
 10 │     Status::PENDING => "Waiting for approval"
    │           ─┬  
    │            ╰── Expected ',' or '}' after object field
────╯

Error: Expected Colon, found Equals
    ╭─[ 0:10:21 ]
    │
 10 │     Status::PENDING => "Waiting for approval"
    │                     ┬  
    │                     ╰── Expected Colon, found Equals
────╯

Error: Expected ',' or '}' after object field
    ╭─[ 0:10:21 ]
    │
 10 │     Status::PENDING => "Waiting for approval"
    │                     ┬  
    │                     ╰── Expected ',' or '}' after object field
────╯

Error: Expected field name or '}'
    ╭─[ 0:10:22 ]
    │
 10 │     Status::PENDING => "Waiting for approval"
    │                      ┬  
    │                      ╰── Expected field name or '}'
────╯

Error: Expected Colon, found Word
    ╭─[ 0:11:5 ]
    │
 11 │     Status::ACTIVE => "Currently active"
    │     ───┬──  
    │        ╰──── Expected Colon, found Word
────╯

Error: Expected ',' or '}' after object field
    ╭─[ 0:11:5 ]
    │
 11 │     Status::ACTIVE => "Currently active"
    │     ───┬──  
    │        ╰──── Expected ',' or '}' after object field
────╯

Error: Expected Colon, found DoubleColon
    ╭─[ 0:11:11 ]
    │
 11 │     Status::ACTIVE => "Currently active"
    │           ─┬  
    │            ╰── Expected Colon, found DoubleColon
────╯

Error: Expected ',' or '}' after object field
    ╭─[ 0:11:11 ]
    │
 11 │     Status::ACTIVE => "Currently active"
    │           ─┬  
    │            ╰── Expected ',' or '}' after object field
────╯

Error: Expected Colon, found Equals
    ╭─[ 0:11:20 ]
    │
 11 │     Status::ACTIVE => "Currently active"
    │                    ┬  
    │                    ╰── Expected Colon, found Equals
────╯

Error: Expected ',' or '}' after object field
    ╭─[ 0:11:20 ]
    │
 11 │     Status::ACTIVE => "Currently active"
    │                    ┬  
    │                    ╰── Expected ',' or '}' after object field
────╯

Error: Expected field name or '}'
    ╭─[ 0:11:21 ]
    │
 11 │     Status::ACTIVE => "Currently active"
    │                     ┬  
    │                     ╰── Expected field name or '}'
────╯

Error: Expected Colon, found Word
    ╭─[ 0:12:5 ]
    │
 12 │     Status::INACTIVE => "Not active"
    │     ───┬──  
    │        ╰──── Expected Colon, found Word
────╯

Error: Expected ',' or '}' after object field
    ╭─[ 0:12:5 ]
    │
 12 │     Status::INACTIVE => "Not active"
    │     ───┬──  
    │        ╰──── Expected ',' or '}' after object field
────╯

Error: Expected Colon, found DoubleColon
    ╭─[ 0:12:11 ]
    │
 12 │     Status::INACTIVE => "Not active"
    │           ─┬  
    │            ╰── Expected Colon, found DoubleColon
────╯

Error: Expected ',' or '}' after object field
    ╭─[ 0:12:11 ]
    │
 12 │     Status::INACTIVE => "Not active"
    │           ─┬  
    │            ╰── Expected ',' or '}' after object field
────╯

Error: Expected Colon, found Equals
    ╭─[ 0:12:22 ]
    │
 12 │     Status::INACTIVE => "Not active"
    │                      ┬  
    │                      ╰── Expected Colon, found Equals
────╯

Error: Expected ',' or '}' after object field
    ╭─[ 0:12:22 ]
    │
 12 │     Status::INACTIVE => "Not active"
    │                      ┬  
    │                      ╰── Expected ',' or '}' after object field
────╯

Error: Expected field name or '}'
    ╭─[ 0:12:23 ]
    │
 12 │     Status::INACTIVE => "Not active"
    │                       ┬  
    │                       ╰── Expected field name or '}'
────╯

Error: Expected Colon, found Word
    ╭─[ 0:13:5 ]
    │
 13 │     Status::SUSPENDED => "Temporarily suspended"
    │     ───┬──  
    │        ╰──── Expected Colon, found Word
────╯

Error: Expected ',' or '}' after object field
    ╭─[ 0:13:5 ]
    │
 13 │     Status::SUSPENDED => "Temporarily suspended"
    │     ───┬──  
    │        ╰──── Expected ',' or '}' after object field
────╯

Error: Expected Colon, found DoubleColon
    ╭─[ 0:13:11 ]
    │
 13 │     Status::SUSPENDED => "Temporarily suspended"
    │           ─┬  
    │            ╰── Expected Colon, found DoubleColon
────╯

Error: Expected ',' or '}' after object field
    ╭─[ 0:13:11 ]
    │
 13 │     Status::SUSPENDED => "Temporarily suspended"
    │           ─┬  
    │            ╰── Expected ',' or '}' after object field
────╯

Error: Expected Colon, found Equals
    ╭─[ 0:13:23 ]
    │
 13 │     Status::SUSPENDED => "Temporarily suspended"
    │                       ┬  
    │                       ╰── Expected Colon, found Equals
────╯

Error: Expected ',' or '}' after object field
    ╭─[ 0:13:23 ]
    │
 13 │     Status::SUSPENDED => "Temporarily suspended"
    │                       ┬  
    │                       ╰── Expected ',' or '}' after object field
────╯

Error: Expected field name or '}'
    ╭─[ 0:13:24 ]
    │
 13 │     Status::SUSPENDED => "Temporarily suspended"
    │                        ┬  
    │                        ╰── Expected field name or '}'
────╯

Error: Expected Colon, found RBrace
    ╭─[ 0:14:3 ]
    │
 14 │   }
    │   ┬  
    │   ╰── Expected Colon, found RBrace
────╯

Error: Expected field name or '}'
    ╭─[ 0:19:5 ]
    │
 19 │     0 => "zero"
    │     ┬  
    │     ╰── Expected field name or '}'
────╯

Error: Expected field name or '}'
    ╭─[ 0:19:7 ]
    │
 19 │     0 => "zero"
    │       ┬  
    │       ╰── Expected field name or '}'
────╯

Error: Expected field name or '}'
    ╭─[ 0:19:8 ]
    │
 19 │     0 => "zero"
    │        ┬  
    │        ╰── Expected field name or '}'
────╯

Error: Expected Colon, found IntegerLiteral
    ╭─[ 0:20:5 ]
    │
 20 │     1 | 2 | 3 => "small"
    │     ┬  
    │     ╰── Expected Colon, found IntegerLiteral
────╯

Error: Expected ',' or '}' after object field
    ╭─[ 0:20:5 ]
    │
 20 │     1 | 2 | 3 => "small"
    │     ┬  
    │     ╰── Expected ',' or '}' after object field
────╯

Error: Expected field name or '}'
    ╭─[ 0:20:7 ]
    │
 20 │     1 | 2 | 3 => "small"
    │       ┬  
    │       ╰── Expected field name or '}'
────╯

Error: Expected field name or '}'
    ╭─[ 0:20:9 ]
    │
 20 │     1 | 2 | 3 => "small"
    │         ┬  
    │         ╰── Expected field name or '}'
────╯

Error: Expected field name or '}'
    ╭─[ 0:20:11 ]
    │
 20 │     1 | 2 | 3 => "small"
    │           ┬  
    │           ╰── Expected field name or '}'
────╯

Error: Expected field name or '}'
    ╭─[ 0:20:13 ]
    │
 20 │     1 | 2 | 3 => "small"
    │             ┬  
    │             ╰── Expected field name or '}'
────╯

Error: Expected field name or '}'
    ╭─[ 0:20:15 ]
    │
 20 │     1 | 2 | 3 => "small"
    │               ┬  
    │               ╰── Expected field name or '}'
────╯

Error: Expected field name or '}'
    ╭─[ 0:20:16 ]
    │
 20 │     1 | 2 | 3 => "small"
    │                ┬  
    │                ╰── Expected field name or '}'
────╯

Error: Expected Colon, found IntegerLiteral
    ╭─[ 0:21:5 ]
    │
 21 │     4..10 => "medium"
    │     ┬  
    │     ╰── Expected Colon, found IntegerLiteral
────╯

Error: Expected ',' or '}' after object field
    ╭─[ 0:21:5 ]
    │
 21 │     4..10 => "medium"
    │     ┬  
    │     ╰── Expected ',' or '}' after object field
────╯

Error: Expected field name or '}'
    ╭─[ 0:21:6 ]
    │
 21 │     4..10 => "medium"
    │      ┬  
    │      ╰── Expected field name or '}'
────╯

Error: Expected field name or '}'
    ╭─[ 0:21:7 ]
    │
 21 │     4..10 => "medium"
    │       ┬  
    │       ╰── Expected field name or '}'
────╯

Error: Expected field name or '}'
    ╭─[ 0:21:8 ]
    │
 21 │     4..10 => "medium"
    │        ─┬  
    │         ╰── Expected field name or '}'
────╯

Error: Expected field name or '}'
    ╭─[ 0:21:11 ]
    │
 21 │     4..10 => "medium"
    │           ┬  
    │           ╰── Expected field name or '}'
────╯

Error: Expected field name or '}'
    ╭─[ 0:21:12 ]
    │
 21 │     4..10 => "medium"
    │            ┬  
    │            ╰── Expected field name or '}'
────╯

Error: Expected Colon, found Word
    ╭─[ 0:22:5 ]
    │
 22 │     _ => "large"
    │     ┬  
    │     ╰── Expected Colon, found Word
────╯

Error: Expected ',' or '}' after object field
    ╭─[ 0:22:5 ]
    │
 22 │     _ => "large"
    │     ┬  
    │     ╰── Expected ',' or '}' after object field
────╯

Error: Expected Colon, found Equals
    ╭─[ 0:22:7 ]
    │
 22 │     _ => "large"
    │       ┬  
    │       ╰── Expected Colon, found Equals
────╯

Error: Expected ',' or '}' after object field
    ╭─[ 0:22:7 ]
    │
 22 │     _ => "large"
    │       ┬  
    │       ╰── Expected ',' or '}' after object field
────╯

Error: Expected field name or '}'
    ╭─[ 0:22:8 ]
    │
 22 │     _ => "large"
    │        ┬  
    │        ╰── Expected field name or '}'
────╯

Error: Expected Colon, found RBrace
    ╭─[ 0:23:3 ]
    │
 23 │   }
    │   ┬  
    │   ╰── Expected Colon, found RBrace
────╯
