baml_language/crates/baml_tests/snapshots/parser_expressions/baml_tests__parser_expressions__02_parser__precedence.snap
---
source: target/debug/build/baml_tests-91bdee82f91f7b04/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    WORD "function"
    WORD "TestPrecedence"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR " bool"
      WORD "bool"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR " {
  // Multiplication before addition
  let a = 2 + 3 * 4  // Should be 14, not 20
  
  // Comparison after arithmetic
  let b = a > 10 + 2  // Should be a > 12
  
  // Logical operators
  let c = true || false && false  // Should be true (AND before OR)
  
  return c
}"
        L_BRACE "{"
        WORD "let"
        WORD "a"
        EQUALS "="
        INTEGER "2"
        PLUS "+"
        INTEGER "3"
        STAR "*"
        INTEGER "4"
        WORD "let"
        WORD "b"
        EQUALS "="
        WORD "a"
        GREATER ">"
        INTEGER "10"
        PLUS "+"
        INTEGER "2"
        WORD "let"
        WORD "c"
        EQUALS "="
        WORD "true"
        OR_OR "||"
        WORD "false"
        AND_AND "&&"
        WORD "false"
        WORD "return"
        WORD "c"
        R_BRACE "}"

=== ERRORS ===
None
